k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: airdrawer
  namespace: airdrawer
  labels:
    app: airdrawer
spec:
  type: ClusterIP
  selector:
    app: airdrawer
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
