k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: airdrawer
  namespace: airdrawer
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - "airdrawer.52.155.117.77.nip.io"
  rules:
    - host: "airdrawer.52.155.117.77.nip.io"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: airdrawer
                port:
                  number: 80
